# monithor

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs
src/web/: agent.rs  connection.rs  frame.rs  main.rs  reader.rs
static/: index.html  style.css
