[package]
name = "monithor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.1"
actix-files = "0.6.2"
actix-web = "4.4.0"
actix-web-static-files = "4.0.1"
anyhow = "1.0.79"
base64 = "0.21.6"
env_logger = "0.10.1"
log = { version = "0.4.20", features = ["std"] }
polodb_core = "4.4.0"
serde = { version = "1.0.195", features = ["serde_derive"] }
serde_derive = "1.0.195"
serde_json = "1.0.111"
static-files = "0.2.3"
tokio = { version = "1.35.1", features = ["io-std"] }



[[bin]]
name = "monithor_web"
path = "src/web/main.rs"

[build-dependencies]
static-files = "0.2.3"

# [[bin]]
# name = "agent"
# path = "src/agent.rs"
